Add JVM Args to readme